--- a/index.html
+++ b/index.html
@@ -396,8 +396,21 @@
                     </li>
                 </ul>
             </div>
-        </div>
+            <div class="footer-third">
+                <p class="footer-third-text">Subscribe</p>
+                <form class="footer-form">
+                    <label class="form-label" for="subscribe">
+                        <input class="form-input" type="email" id="subscribe" name="subscribe" placeholder="E-mail">
+                    </label>
+                    <button class="footer-form-btn" type="submit">Subscribe
+                        <svg class="icon-footer-third" width="24" height="24">
+                            <use href="./images/icons.svg#icon-frame"></use>
+                        </svg>
+                    </button>
+                </form>
 
+            </div>
+        </div>
     </footer>
 </body>
 
