--- a/index.html
+++ b/index.html
@@ -46,8 +46,6 @@
 
     </header>
 
-
-
     <main>
         <section class="first-section">
             <div class="container">
@@ -412,6 +410,76 @@
             </div>
         </div>
     </footer>
+
+    <div class="backdrop">
+        <div class="modal-window">
+            <button class="modal-close-btn" type="button">
+                <svg class="modal-icon-close-btn" width="8" height="8" aria-label="icon close">
+                    <use href="./images/icons.svg#icon-close"></use>
+                </svg>
+            </button>
+            <p class="modal-window-text">Leave your contacts and we will call you back</p>
+            <form class="review-form">
+                <div class="review-form-wrapper">
+                    <label for="user-name" class="review-form-name-label">Name</label>
+                    <div class="review-form-input-wrapper">
+                        <input type="text" class="review-form-input" name="user-name" id="user-name"
+                            pattern="[a-zA-Zа-яА-ЯіІїЇгГєЄ']+" required title="Kateryna" />
+                        <svg class="review-form-icon" width="18" height="18">
+                            <use href="./images/icons.svg#icon-person"></use>
+                        </svg>
+                    </div>
+
+                </div>
+
+                <div class="review-form-wrapper">
+                    <label for="user-phone" class="review-form-name-label">Phone</label>
+                    <div class="review-form-input-wrapper">
+                        <input type="tel" class="review-form-input" name="user-phone" id="user-phone"
+                            pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}" required title="xxx-xxx-xx-xx" />
+                        <svg class="review-form-icon" width="18" height="18">
+                            <use href="./images/icons.svg#icon-phone"></use>
+                        </svg>
+                    </div>
+                </div>
+
+                <div class="review-form-wrapper">
+                    <label for="user-email" class="review-form-name-label">Email</label>
+                    <div class="review-form-input-wrapper">
+                        <input type="email" class="review-form-input" name="user-email" id="user-email" required />
+                        <svg class="review-form-icon" width="18" height="18">
+                            <use href="./images/icons.svg#icon-email"></use>
+                        </svg>
+                    </div>
+                </div>
+
+                <div class="review-form-wrapper">
+                    <label for="user-coment" class="review-form-name-label">Comment</label>
+                    <textarea class="review-form-taxtarea" name="user-coment" id="user-coment"
+                        placeholder="Text input"></textarea>
+                </div>
+
+                <div class="review-form-checkbox-wrapper">
+                    <input class="form-checkbox visually-hidden" type="checkbox" name="privasy-policy" value="true"
+                        required id="privasy-policy" />
+                    <label class="checkbox-label" for="privasy-policy">
+                        <span class="review-checkbox">
+                            <svg class="checkbox-icon" width="10" height="8">
+                                <use href="./images/icons.svg#icon-Vector"></use>
+                            </svg>
+                        </span>I accept the terms and
+                        conditions of the
+                        <a class="checkbox-link" href="">Privacy Policy</a></label>
+                </div>
+                <button class="submit-btn" type="submit">Send</button>
+
+            </form>
+        </div>
+
+    </div>
+
+
+
 </body>
 
 </html>
