--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@
         </div>
     </footer>
 
-    <div class="backdrop">
+    <div class="backdrop is-open">
         <div class="modal-window">
             <button class="modal-close-btn" type="button">
                 <svg class="modal-icon-close-btn" width="8" height="8" aria-label="icon close">
@@ -425,7 +425,7 @@
                     <div class="review-form-input-wrapper">
                         <input type="text" class="review-form-input" name="user-name" id="user-name"
                             pattern="[a-zA-Zа-яА-ЯіІїЇгГєЄ']+" required title="Kateryna" />
-                        <svg class="review-form-icon" width="18" height="18">
+                        <svg class="review-form-icon" width="18" height="24">
                             <use href="./images/icons.svg#icon-person"></use>
                         </svg>
                     </div>
@@ -437,7 +437,7 @@
                     <div class="review-form-input-wrapper">
                         <input type="tel" class="review-form-input" name="user-phone" id="user-phone"
                             pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}" required title="xxx-xxx-xx-xx" />
-                        <svg class="review-form-icon" width="18" height="18">
+                        <svg class="review-form-icon" width="18" height="24">
                             <use href="./images/icons.svg#icon-phone"></use>
                         </svg>
                     </div>
@@ -447,29 +447,28 @@
                     <label for="user-email" class="review-form-name-label">Email</label>
                     <div class="review-form-input-wrapper">
                         <input type="email" class="review-form-input" name="user-email" id="user-email" required />
-                        <svg class="review-form-icon" width="18" height="18">
+                        <svg class="review-form-icon" width="18" height="24">
                             <use href="./images/icons.svg#icon-email"></use>
                         </svg>
                     </div>
                 </div>
 
                 <div class="review-form-wrapper">
-                    <label for="user-coment" class="review-form-name-label">Comment</label>
-                    <textarea class="review-form-taxtarea" name="user-coment" id="user-coment"
+                    <label for="user-comment" class="review-form-name-label">Comment</label>
+                    <textarea class="review-form-taxtarea" name="user-comment" id="user-comment"
                         placeholder="Text input"></textarea>
                 </div>
 
                 <div class="review-form-checkbox-wrapper">
-                    <input class="form-checkbox visually-hidden" type="checkbox" name="privasy-policy" value="true"
-                        required id="privasy-policy" />
-                    <label class="checkbox-label" for="privasy-policy">
+                    <input class="form-checkbox visually-hidden" type="checkbox" name="user-privasy" value="true"
+                        required id="user-privasy" />
+                    <label class="checkbox-label" for="user-privasy">
                         <span class="review-checkbox">
                             <svg class="checkbox-icon" width="10" height="8">
                                 <use href="./images/icons.svg#icon-Vector"></use>
                             </svg>
                         </span>I accept the terms and
-                        conditions of the
-                        <a class="checkbox-link" href="">Privacy Policy</a></label>
+                        conditions of the<a class="checkbox-link" href="">Privacy Policy</a></label>
                 </div>
                 <button class="submit-btn" type="submit">Send</button>
 
