--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@
         </div>
     </footer>
 
-    <div class="backdrop is-open">
+    <div class="backdrop">
         <div class="modal-window">
             <button class="modal-close-btn" type="button">
                 <svg class="modal-icon-close-btn" width="8" height="8" aria-label="icon close">
