--- a/index.html
+++ b/index.html
@@ -460,15 +460,24 @@
                 </div>
 
                 <div class="review-form-checkbox-wrapper">
-                    <input class="form-checkbox visually-hidden" type="checkbox" name="user-privasy" value="true"
-                        required id="user-privasy" />
-                    <label class="checkbox-label" for="user-privasy">
+                    <input name="user-privacy" id="user-privacy" class="form-checkbox visually-hidden" type="checkbox"
+                        value="true" required />
+                    <label for="user-privacy" class="checkbox-label">
                         <span class="review-checkbox">
                             <svg class="checkbox-icon" width="10" height="8">
                                 <use href="./images/icons.svg#icon-Vector"></use>
                             </svg>
-                        </span>I accept the terms and
-                        conditions of the<a class="checkbox-link" href="">Privacy Policy</a></label>
+                        </span>
+
+                        <label class="label-checkbox">
+                            <span class="checkbox-view">
+                                <svg class="checkbox-icon" height="8" width="10">
+                                    <use href="./images/icons.svg#icon-chekmark"></use>
+                                </svg>
+                            </span>
+                            I accept the terms and conditions of the&nbsp;<a class="privacy-style" href="">Privacy
+                                Policy</a>
+                        </label><a class="checkbox-link" href="">Privacy Policy</a></label>
                 </div>
                 <button class="submit-btn" type="submit">Send</button>
 
