--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@
         </div>
     </footer>
 
-    <div class="backdrop">
+    <div class="backdrop is-open">
         <div class="modal-window">
             <button class="modal-close-btn" type="button">
                 <svg class="modal-icon-close-btn" width="8" height="8" aria-label="icon close">
@@ -453,7 +453,7 @@
                     </div>
                 </div>
 
-                <div class="review-form-wrapper">
+                <div class="review-form-wrapper-comment">
                     <label for="user-comment" class="review-form-name-label">Comment</label>
                     <textarea class="review-form-taxtarea" name="user-comment" id="user-comment"
                         placeholder="Text input"></textarea>
@@ -474,10 +474,9 @@
                                 <svg class="checkbox-icon" height="8" width="10">
                                     <use href="./images/icons.svg#icon-chekmark"></use>
                                 </svg>
-                            </span>
-                            I accept the terms and conditions of the&nbsp;<a class="privacy-style" href="">Privacy
-                                Policy</a>
-                        </label><a class="checkbox-link" href="">Privacy Policy</a></label>
+                            </span>I accept the terms and conditions of the&nbsp;<a class="checkbox-link"
+                                href="">Privacy Policy</a>
+                        </label>
                 </div>
                 <button class="submit-btn" type="submit">Send</button>
 
@@ -485,9 +484,6 @@
         </div>
 
     </div>
-
-
-
 </body>
 
 </html>
