--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@
         </div>
     </footer>
 
-    <div class="backdrop is-open">
+    <div class="backdrop">
         <div class="modal-window">
             <button class="modal-close-btn" type="button">
                 <svg class="modal-icon-close-btn" width="8" height="8" aria-label="icon close">
@@ -468,15 +468,16 @@
                                 <use href="./images/icons.svg#icon-Vector"></use>
                             </svg>
                         </span>
+                    </label>
 
-                        <label class="label-checkbox">
-                            <span class="checkbox-view">
-                                <svg class="checkbox-icon" height="8" width="10">
-                                    <use href="./images/icons.svg#icon-chekmark"></use>
-                                </svg>
-                            </span>I accept the terms and conditions of the&nbsp;<a class="checkbox-link"
-                                href="">Privacy Policy</a>
-                        </label>
+                    <label class="checkbox">
+                        <span class="checkbox-view">
+                            <svg class="checkbox-icon" height="8" width="10">
+                                <use href="./images/icons.svg#icon-chekmark"></use>
+                            </svg>
+                        </span>I accept the terms and conditions of the&nbsp;<a class="checkbox-link" href="">Privacy
+                            Policy</a>
+                    </label>
                 </div>
                 <button class="submit-btn" type="submit">Send</button>
 
