--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@
         </div>
     </footer>
 
-    <div class="backdrop">
+    <div class="backdrop is-open">
         <div class="modal-window">
             <button class="modal-close-btn" type="button">
                 <svg class="modal-icon-close-btn" width="8" height="8" aria-label="icon close">
@@ -456,29 +456,32 @@
                 <div class="review-form-wrapper-comment">
                     <label for="user-comment" class="review-form-name-label">Comment</label>
                     <textarea class="review-form-taxtarea" name="user-comment" id="user-comment"
-                        placeholder="Text input"></textarea>
+                        placeholder="Text input">
+                    </textarea>
                 </div>
 
-                <div class="review-form-checkbox-wrapper">
-                    <input name="user-privacy" id="user-privacy" class="form-checkbox visually-hidden" type="checkbox"
-                        value="true" required />
-                    <label for="user-privacy" class="checkbox-label">
-                        <span class="review-checkbox">
-                            <svg class="checkbox-icon" width="10" height="8">
+                <div class="review-form-chackbox-wrapper">
+                    <input type="checkbox" class="review-form-privacy-chackbox visually-hidden" name="privacy-policy"
+                        id="privacy-policy" required />
+                    <label for="privacy-policy" class="review-form-chackbox-label">
+                        <span class="review-form-own-chackbox">
+                            <svg class="review-form-own-chackbox-icon" width="10" height="8">
                                 <use href="./images/icons.svg#icon-Vector"></use>
                             </svg>
                         </span>
+                        I accept the terms and conditions of
+                        the
+                        <a class="review-form-chackbox-label-link" href="">Privacy Policy</a>
                     </label>
 
-                    <label class="checkbox">
-                        <span class="checkbox-view">
-                            <svg class="checkbox-icon" height="8" width="10">
-                                <use href="./images/icons.svg#icon-chekmark"></use>
-                            </svg>
-                        </span>I accept the terms and conditions of the&nbsp;<a class="checkbox-link" href="">Privacy
-                            Policy</a>
-                    </label>
+
                 </div>
+
+
+
+
+
+
                 <button class="submit-btn" type="submit">Send</button>
 
             </form>
