--- a/index.html
+++ b/index.html
@@ -461,26 +461,20 @@
                 </div>
 
                 <div class="review-form-chackbox-wrapper">
-                    <input type="checkbox" class="review-form-privacy-chackbox visually-hidden" name="privacy-policy"
-                        id="privacy-policy" required />
-                    <label for="privacy-policy" class="review-form-chackbox-label">
+                    <input type="checkbox" class="review-form-privacy-chackbox visually-hidden" name="user-privacy"
+                        id="user-privacy" value="true" required />
+                    <label for="user-privacy" class="review-form-chackbox-label">
                         <span class="review-form-own-chackbox">
                             <svg class="review-form-own-chackbox-icon" width="10" height="8">
                                 <use href="./images/icons.svg#icon-Vector"></use>
                             </svg>
                         </span>
-                        I accept the terms and conditions of
-                        the
+                        " I accept the terms and conditions of the "
                         <a class="review-form-chackbox-label-link" href="">Privacy Policy</a>
                     </label>
 
 
                 </div>
-
-
-
-
-
 
                 <button class="submit-btn" type="submit">Send</button>
 
